src/app/item/item-description/item-description.component.css
.card-width {
  width: 30vw;
}

.mat-dialog-content {
  margin: 0px !important;
  padding: 0px !important;
}

.mat-card-title {
  font-family: 'Poppins', sans-serif;
}

.item-icon {
  transform: scale(2);
  margin-top: 10px;
  padding-right: 15px;
  padding-left: 8px;
}

